ingress/nks-alb-ingress-install.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
  labels:
    app.kubernetes.io/name: alb-ingress-controller
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: ncloud.com/alb

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alb-ingress-controller
  namespace: kube-system
  labels:
    app.kubernetes.io/name: alb-ingress-controller
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: alb-ingress-controller
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: alb-ingress-controller
    spec:
      containers:
      - command:
        - /alb-ingress-controller
        args:
        - --api-url=nks.apigw.ntruss.com
        - --base-path=/ncloud/v1
        - --ingress-class=ncloud.com/alb
        image: nks.kr.private-ncr.ntruss.com/alb-ingress-controller:0.6.1
        name: alb-ingress-controller
        resources:
          limits:
            cpu: 100m
            memory: 180Mi
          requests:
            cpu: 100m
            memory: 90Mi
      serviceAccountName: alb-ingress-controller
